public/stylesheets/screen_spotus.css
/* -----------------------------------------------------------------------
 Spot.us Overrides and Custom CSS over Blueprint CSS Framework 0.7.1
 Provider: Hashrocket, Inc. http://www.hashrocket.com
----------------------------------------------------------------------- */

/* -----------------------------------------------------------------------
 Spot.us overrides for Blueprint 
----------------------------------------------------------------------- */

#user-header {width:960px;margin:0 auto;display:inline-block;display:block;}
table.top td.top {vertical-align:top;}
.debug { background:#ccc;}

/* layout dimension */
.container {
  width: 930px;
  padding: 0 15px;
  }
#equalize {
  position: relative;
  }
#footer {
  padding: 0 5px;
  }
#user-header {
  width:960px;
  }
#header {
  background: #fff;
  margin: 0 -15px 0 -15px;
  padding: 10px 15px;
  }
#footer, .body-content {
  width:960px;
  margin:0 auto;
  display:inline-block;
  display:block;
  padding: 0 10px;
  }
/* styling */
.reg-line-height {
  margin: 0;	
  }
.nil-line-height {
  margin: 0;
  line-height: 11px;
  }
p.nil-line-height {
   padding: 0;
   line-height: 14px;
   }
.container a {
  color: #999999;
  text-decoration: none;
  }
.alt-spotus {
  font-family: Georgia, serif, "Warnock Pro", "Goudy Old Style","Palatino","Book Antiqua";
  font-weight:normal;
  }
h4.title { 
  margin: 0px;
  font-weight: bold;
  }
.float_left {
  float: left;
  }
.float_right {
  float: right;
  }
.box_white {
  background: #fff;
  padding: 10px;
  }
.container h3, .container h2 {
  margin: 0 0 10px 0;
  padding: 0;
  }
.home-floater {
  padding:15px;
  margin: 0px;
  }
.home-image-box {
  padding:0px;
  }
.home-boxer {
  background: url(/images/spotus_home_boxer.jpg) repeat-x top left;
  }
.login-boxer {
  background: url(/images/spotus_login_boxer.gif) repeat-y top left;
  }
.login-boxer .span-6 {
  padding: 15px;
  margin-right: 15px;
  width: 200px;
  }
.float-left {
  float: left;
  }
.float-right {
  float: right;
  }
.row {
  clear: both;
  margin: 0 0 10px 0;
  }
.no_margin {
  margin: 0;
  }
.add_edit {
  margin: 0 0 0 10px;
  }
.quieter {
  color:#999999;
  font-weight: normal;
  }
.uppcased_button_text, .inline_pledge, .inline_donate {
  text-transform: uppercase;
  width:210px;
  text-align:right;
  margin: 0;
  }
.fully_funded_no_text {
  text-indent:-10000px;
  font-size: 0;
  }
.shared_progress_bar {
  width: 120px;
  }
.small-spotus {font-size:.8em;margin-bottom: 0;line-height:1.875em;}
.inline_pledge input#pledge_amount { 
  width: 120px; 
  margin: 3px 0 0 0; 
  border: 1px solid #C6004A;
  padding: 6px 0;
  }
.inline_donate input#donation_amount { 
  width: 120px; 
  margin: 3px 0 0 0; 
  border: 1px solid #266220;
  padding: 6px 0;
  }
/* Adjust showgrid to use 960px instead of 950px */
.showgrid {background:url(src/grid.png) 15px -3px;}

/* verride p + p fancy type to not indent the footer-notes paragraph section */
#footer-notes .span-6 p + p, #footer-notes .span-4 p + p, .existing_tips_picthes p + p {
  text-indent: 0;
  margin-top:-1.5em;
  }
.container p + p {
  text-indent: 0;
  margin-top:1.5em;
  }
/* -----------------------------------------------------------------------
 Spot.us CUSTOM CSS 
----------------------------------------------------------------------- */
body {
  background: #E3EEEF url(/images/spotus_bg.jpg) repeat-x;
  margin-top: 0px;
  margin-bottom: 0px;
  }
.centered {
  text-align: center;
  color: #fff;
  }
.centered_text {
  margin: 0 0 0 35px;
  float: left;
  }
.text-justify {
  text-align: justify;
  }

/* Header & Main Nav Styles */
#header .logo {
  background: url(/images/spotus_header_logo.jpg) no-repeat;
  width: 222px;
  height: 31px;
  overflow: hidden;
  float: left;
  }
#header .logo-link {
  width: 222px;
  height: 31px;
  display: block;
  }
#header .nav-container {
  float: right;
  background: url(/images/spotus_nav_bg.gif) no-repeat 0 bottom;
  padding: 6px 0 0 0;
  height: 26px;
  width: 506px;
  }
#header .nav-container ul {
  margin: 0;
  padding: 0;
  }
.nav-container #main-nav li {
  float: left;
  list-style: none;
  }
.nav-container #main-nav li a { 
  text-decoration: none;
  display: block;
  text-size: 18px;
  color: #ef4179;
  font-weight: bold;
  }
#main-nav li.start_story, #main-nav li.fund_story, #main-nav li.read_story, #main-nav li.about_spotus  {
  text-align: center;
  }
#main-nav li.start_story {
  width: 118px;
  }
#main-nav li.fund_story {
  width: 153px;
  }
#main-nav li.read_story {
  width: 150px
  }
#main-nav li.about_spotus {
  margin: 0 0 0 18px;
  width: 67px
  }

/* Content Styles */
.double_footer_border {
  background: url(/images/spotus_footer_title_border.gif) repeat-x 0 bottom;
  }
.double_content_border {
  background: url(/images/spotus_content_title_border.gif) repeat-x 0 bottom;
  }
.double_footer_border, .double_content_border {
  height: 3px;
  margin: 0 0 10px 0;
  }
.register input.text, .or_login input.text {
  width: 190px!important;
  }
.gray_button {
  background: url(/images/spotus_button_plain_gray.gif) no-repeat 1px 3px;
  width: 111px;
  height: 35px;
  display: block;
  color: #ff0062;
  padding: 0;
  font-size: 18px;
  text-align: center;
  text-decoration: none;
  margin: 0;
  border: 0;
  }
.forgot_password {
  text-transform: uppercase;
  color: #8B9C9F;
  font-size: 9px;
  text-decoration: none;
  margin-right: 3px;
  }
  
/* User Header & Footer Styles */
.pink { color: #ce859d;}
.moss-green { color: #909a9d;}
#user-header .slogan {
  padding: 5px 0 3px 0;
  text-transform: uppercase;
  letter-spacing: .15em;
  float: right;
  }
#user-header ul.user-header-nav {
  padding: 5px 0 3px 0;
  margin: 0;
  color: #ccc;
  float: left;
  }
#footer, .body-content {
  background: url(/images/spotus_shadow_bg.jpg) repeat-y;
  }
#footer div#footer-copyright, #footer div#footer-notes {
  background: #52656B;
  margin: 0 auto;
  padding: 15px;
  color: #ccc;
  width: 930px;
  text-align:left;
  }
/* ... */

